# littlelang

./: CMakeLists.txt  Compilerx64.cpp  Compilerx64.hpp  Compilerx64.obj.tests.cpp  Compilerx64.tests.cpp  Elf.cpp  Elf.hpp  InstrBuffer.cpp  InstrBuffer.hpp  InstrBufferx64.cpp  InstrBufferx64.hpp  InstrBufferx64.tests.cpp  Linker.cpp  Linker.hpp  Linker.tests.cpp  MachO.cpp  MachO.hpp  MachO.tests.cpp  ParsedBlock.tests.cpp  Parser.cpp  Parser.hpp  Parser.tests.cpp  ParserUtils.hpp  Statement.hpp  TranslationUnit.cpp  TranslationUnit.hpp  TranslationUnit.tests.cpp  TranslationUnitTypes.hpp  Variables.hpp  main.cpp  readme.md
example_programs/: fizzbuzz.ll  fizzbuzz_functions.ll  functions.ll
